# PR-ComfyUI_mozman_nodes-d3c39d46

./: .gitignore  LICENSE  __init__.py  apply_sdxl_style.py  art_styles_expansion.json  clipdrop_styles.json  fooocus.json  pyproject.toml  sdxl_styles_mre.json  sdxl_styles_sai.json  sdxl_styles_twri.json  test_apply_sdxl_styles.py
styles/: art_styles_expansion.json  clipdrop_styles.json  technical_documentation.json
